--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "autoprefixer": "^10.4.17",
+    "daisyui": "^4.7.2",
     "postcss": "^8.4.35",
     "svelte": "^4.2.11",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.10"
   }
 }
