update path server live

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=1116
-PATH_API="http://localhost:1115/"
+PATH_API="http://128.199.241.112:1115/"
+#PATH_API="http://localhost:1115/"
 
 
 # REDIS settings:
